--- a/index.html
+++ b/index.html
@@ -40,10 +40,13 @@
 
     <section class="container-fluid px-0">
       <div class="row align-items-center">
-        <div class="col-lg-12">
-          <div class="text-white text-center d-none d-lg-block mt-5" id="">
-            
-          </div>
+        <div class="d-lg-inline">
+          <div class="bg-video">
+            <video class="bg-video__content" autoplay muted loop>
+                <source src="img/video1.mp4" type="video/mp4">
+                <!-- <source src="img/video1.webm" type="video/webm"> -->
+            </video>
+        </div>
         </div>
       </div>
     </section>
