refactor to SASS progress

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </head>
   
   <body>
-    <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
-      <div href="#" class="navbar-brand">CANDY</div>
+    <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md fixed-top">
+      <div href="#" class="navbar-brand">CHASE</div>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -32,7 +32,7 @@
             <a href="" class="nav-link">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link">TICKETS</a>
+            <a href="" class="nav-link">PHOTOS</a>
           </li>
         </ul>
       </div>
@@ -42,7 +42,7 @@
       <div class="row align-items-center">
         <div class="d-inline">
           <h1>
-            TEST
+            
           </h1>
         </div>
         </div>
